// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="container md undefined"
  data-testid="InputField"
>
  <h4
    data-testid="Label"
  >
    <span>
      username
    </span>
  </h4>
  <input
    name="username"
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`matches snapshot 2`] = `
<div
  className="container sm undefined"
  data-testid="InputField"
>
  <p
    data-testid="Label"
  >
    <span>
      username
    </span>
  </p>
  <input
    name="username"
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`matches snapshot 3`] = `
<div
  className="container lg undefined"
  data-testid="InputField"
>
  <h2
    data-testid="Label"
  >
    <span>
      username
    </span>
  </h2>
  <input
    name="username"
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`matches snapshot 4`] = `
<div
  className="container xl undefined"
  data-testid="InputField"
>
  <h1
    data-testid="Label"
  >
    <span>
      username
    </span>
  </h1>
  <input
    name="username"
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
</div>
`;
